--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,20 @@
     --dark: #434341;
 }
 /*Misc*/
+.title {
+    background-color: transparent !important;
+    color: var(--secondary) !important;
+    text-transform: uppercase !important;
+    font-size: 25px !important;
+}
+strong {
+    font-weight: bold !important;
+}
+
+.shad {
+    box-shadow: 2px 2px 7px 0.5px var(--dark) !important;
+}
+
 .text-white {
     color: var(--light);
 }
@@ -117,8 +131,8 @@ nav {
     text-transform: uppercase;
     outline: none;
 }
-.navbar .navbar-nav .nav-link:hover,
-.navbar .navbar-nav .nav-link.active {
+.navbar .navbar-nav .nav-link:hover/*,
+.navbar .navbar-nav .nav-link.active */ {
     color: var(--primary);
 }
 .navbar .dropdown-toggle::after {
@@ -157,6 +171,7 @@ nav .logo {
     font-size: 20px;
 }
 /*Carousel*/
+
 .carousel-caption {
     top: 0;
     left: 0;
@@ -205,40 +220,21 @@ nav .logo {
     font-size: 35px !important;
 }
 
-/***FACTS***/
+/***INTRO***/
 .introIcon {
     border-radius: 50%;
 }
 .iconTxt {
     display: flex;
 }
-.facts h5 {
+.intro h5 {
     align-self: center;
     color: var(--dark);
 }
-.aboutM .fadeInUp {
-    padding: 15px !important;
-    background-color: var(--light);
-}
-.aboutM h1 {
-    font-size: 35px;
-    color: var(--secondary);
-    text-align: center;
-    padding-bottom: 15px;
-    border-bottom: 2px solid var(--primary);
-    width: fit-content;
-}
-.aboutM h6 {
-    margin-top: 25px;
-}
-.vidWrap {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 25px;
-}
 
 /***ABOUT***/
-.wow {
+
+#about .wow {
     margin-top: -5px;
     background-color: var(--light);
 }
@@ -251,12 +247,40 @@ nav .logo {
     justify-content: space-around;
     margin-bottom: 25px;
 }
-.wow h6 {
+#about .wow h6 {
     color: var(--secondary) !important;
 }
-.wow p {
+#about .wow p {
     text-align: justify;
     color: var(--dark);
+}
+
+.aboutTitle {
+    font-size: 25px;
+    max-width: 75%;
+    margin: auto;
+    color: var(--secondary);
+    text-align: center;
+    padding-bottom: 15px;
+    border-bottom: 2px solid var(--primary);
+    width: fit-content;
+}
+
+#about .fadeInUp {
+    padding: 15px !important;
+    background-color: var(--light);
+}
+#about h6 {
+    margin-top: 25px;
+}
+.vidWrap {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+}
+
+.vidWrap iframe {
+    border-radius: 7px;
 }
 
 /***ACTU***/
@@ -271,9 +295,11 @@ nav .logo {
 .wow2 {
     background: unset;
 }
+
 /***COURSES***/
 .outils {
     margin-top: 50px;
+    height: auto !important;
 }
 .courses p {
     text-align: center !important;
@@ -294,9 +320,7 @@ nav .logo {
     color: var(--secondary);
     background: unset !important;
 }
-.outilTitle {
-    text-transform: uppercase;
-}
+
 .courses-item .courses-overlay {
     position: absolute;
     width: 100%;
@@ -314,7 +338,6 @@ nav .logo {
 .courses-item {
     transform: scale(1);
     transition: 0.4s;
-    box-shadow: 2px 2px 7px 0.5px var(--tertiary);
 }
 .courses-item:hover .courses-overlay {
     height: 100%;
@@ -472,10 +495,6 @@ nav .logo {
 .team-social p {
     color: var(--light) !important;
     font-size: 12px !important;
-}
-.teamTitle {
-    background-color: unset !important;
-    color: var(--secondary) !important;
 }
 
 /***FOOTER***/
@@ -692,7 +711,7 @@ body:before {
     .navbar .navbar-nav {
         border-top: 1px solid #eeeeee;
     }
-    .facts {
+    .intro {
         position: relative;
         margin-top: -75px;
         z-index: 1;
