--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
     top: 0;
     bottom: 0;
     z-index: -1;
+    opacity: 0.2;
 }
 
 /*Misc*/
@@ -34,8 +35,8 @@ strong {
 nav,
 footer {
     box-shadow: 2px 2px 7px 0.5px var(--dark) !important;
-    background: center / cover no-repeat url("../img/bckg.webp");
-    background-color: var(--light) !important;
+    /*background: center / cover no-repeat url("../img/bckg.webp");
+    background-color: var(--light) !important;*/
 }
 
 .text-white {
@@ -231,6 +232,7 @@ nav .logo {
     color: #999999;
 }
 /*Carousel Text*/
+
 .introText1 {
     justify-content: flex-end !important;
     margin-left: 150px;
@@ -254,6 +256,10 @@ nav .logo {
 .intro h5 {
     align-self: center;
     color: var(--dark);
+}
+
+.intro .row {
+    background-color: var(--light);
 }
 
 /***ABOUT***/
